themes/zephyr/front-end/src/styles/_general-classes.scss
/* ... */
.article-container, .guide-container {
    .guide {
        &:not(:last-child) {
            margin-bottom: size(10);
        }
        
        opacity: 0.85;
        transition: opacity 400ms;
        
        .title {
            cursor: pointer;
            display: flex;
            align-items: center;
            justify-content: space-between;
            
            .paragraph-1 {
                font-weight: 600;
                letter-spacing: size(0.27);
            }
            
            .icons {
                position: relative;
                width: size(8);
                height: size(8);
                
                .icon {
                    font-size: size(15);
                    font-weight: 600;
                    cursor: pointer;
                    position: absolute;
                    right: 0;
                    top: 50%;
                    transform: translateY(-50%);
                    transition: opacity 400ms;
                    
                    &.minus {
                        opacity: 0;
                        z-index: -1;
                    }
                    
                    &.plus {
                        opacity: 1;
                        z-index: 2;
                    }
                }
            }
        }
        
        &.active {
            opacity: 1;
            
            .icons {
                .icon {
                    &.plus {
                        opacity: 0;
                        z-index: -1;
                    }
                    
                    &.minus {
                        opacity: 1;
                        z-index: 2;
                    }
                }
            }
        }
        
        .guide-content {
            width: 100%;
            height: 0;
            overflow: hidden;
            margin-left: size(-17);
            transition: all 400ms ease-in-out;
            
            &.active {
            
            }
        }
    }
}

// header links
.small-link {
    color: $zephyr-gray;
    font-family: $Sailec;
    font-size: size(15);
    font-weight: 400;
    font-style: normal;
    letter-spacing: size(0.28);
    line-height: size(24);
    
    @include x-large-screen {
        font-size: size(14);
        letter-spacing: size(0.3);
    }
    
}

// in contact us
.title {
    color: $zephyr-gray;
    font-family: $Canela;
    font-size: size(24);
    font-weight: 300;
    font-style: normal;
    letter-spacing: size(0.44);
    line-height: size(32);
    @include x-large-screen {
        font-size: size(36);
        line-height: size(42);
        letter-spacing: size(0.47);
    
    }
}

.small-text {
    color: $zephyr-black;
    font-size: size(14);
    font-weight: 400;
    line-height: size(24);
    
    
    &.has-blue {
        color: $zephyr-blue;
    }
}


input ,textarea {
    padding: 0;
    background: none;
    border: none;
    color: #d1d1d1;
    font-family: $Freight;
    font-size: size(14);
    font-weight: 400;
    font-style: normal;
    letter-spacing: size(0.44);
    line-height: size(21);
    text-align: left;
    
    &::placeholder {
        color: #d1d1d1;
        font-family: $Freight;
        font-size: size(14);
        font-weight: 400;
        font-style: normal;
        letter-spacing: size(0.44);
        line-height: size(21);
        text-align: left;
    }
}


.btn {
    color: $zephyr-gray;
    font-family: $Sailec;
    font-size: size(12);
    font-weight: 400;
    font-style: normal;
    letter-spacing: size(0.38);
    text-align: center;
    max-width: size(156);
    min-height: size(39);
    border: 1px solid #4b4b4b;
    display: flex;
    align-items: center;
    justify-content: center;
    padding: size(7) size(20) size(5);
    position: relative;
    transition: color 400ms;
    &::before {
        content: '';
        position: absolute;
        left: 0;
        top: 0;
        width: 0;
        height: 100%;
        background: $zephyr-green;
        transition: width 400ms;
        z-index: -1;
    }
    &:hover {
        border-color: $zephyr-green;
        &::before {
            width: 100%;
        }
    }
    &.has-bg{
        border: 0;
        &::before{
            width: 100%;
            background: $zephyr-green;
        }
        &:hover{
            &::before{
                width: 0;
            }
        }
    }
}

svg {
    path {
        transition: all 400ms ease-in-out;
    }
}

.show {
    display: block;
    @include x-large-screen {
        display: none;
    }
}

.hide {
    display: none;
    @include x-large-screen {
        display: block;
    }
}

.line-overflow,
.word-overflow {
    overflow: hidden;
    vertical-align: top;
}

[class ^="iv-st"], [class *= " iv-st"] {
    opacity: 0;
    visibility: hidden;
}

.iv-st-from-top, .iv-st-from-bottom, .iv-st-from-left, .iv-st-from-right, .word-up, .line-up, .real-line-up {
}

[smooth-scroll-container] {
    //width: auto;
    height: 100vh;
    width: 100%;
    overflow: hidden;
    margin: 0;
}

